@@ -13,6 +13,7 @@ python-apt (0.8.0~exp2) UNRELEASED; urgency=low
   * doc/examples: Add example on how to get architecture names (LP: #194374)
   * apt_pkg: Fix unsigned/long-vs-int issues (LP: #610820)
   * apt.cache: Document that update() may need an open() (Closes: #622342)
+  * apt.cache: Add a fetch_archives() method (Closes: #622347)
 
  -- Julian Andres Klode <jak@debian.org>  Wed, 06 Apr 2011 09:46:52 +0200
 
